# datatset-converter

./: .env.example  .gitignore  Makefile  README.md  datashape.py  docker-compose.yml  download_dataset.py  main.py.bak  pyproject.toml  run_workflow.py  test_pipeline.py  think.py  think_updated.py  worker.py
transformers/: transform_allenai_tulu_sft_mixture.py  transform_allenai_tulu_v_sft_mixture.py  transform_ise_uiuc_magicoder_evol_instruct_0k.py  transform_ldjnr_puffin.py  transform_meta_math_metamathqa.py  transform_microsoft_orca_math_word_problems_00k.py  transform_nvidia_helpsteer.py  transform_qintongli_gsm_plus_v0.py  transform_roneneldan_tinystories.py  transform_teknium_openhermes.py  transform_totally_not_an_llm_everythinglm_data_v.py  transform_vezora_tested_k_python_alpaca.py
